--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <title>Imageboard</title>
     </head>
     <body>
+        <h1>Image Board</h1>
+        <main id="main">
+             <div v-for="image in images" class="show-images"> 
+                    <h4>{{image.title}}</h4> 
+                    <img v-bind:src='image.url' />
+                    <p>{{image.description}}</p>
+                    <p>-by {{image.username}}</p>
+            </div>
+
+        </main>
         <script
             src="/js/app.js"
             type="module"
